# stock_trade_datamine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  candle.h  candle_data.h  csv_parser.cpp  errors.h  strutil.h  text_format.h
src/indicators/: CMakeLists.txt  atr.h  cubic_poly_filter.h  cubic_poly_levels.h  de_mark_seq.h  diffusion_distance.h  exponential_ma.h  japanese_pattern.h  macd.h  rsi.h  run_seq.h  simple_ma.h
src/mainapp/: CMakeLists.txt  main.cpp
src/python/: predict_gbrt.py  signal_pred.py
src/research/: compute_index.py  cubic_poly_filter.py
src/series/: CMakeLists.txt  base_series.h  candle_adapter.h  candle_series.h  delta_candle.h  delta_series.h  dummy_series.h  level_series.h  value_series.h
